Fixed MapStatus alignment.

--- a/modules/gui/frontend/src/widget/mapStatus.module.css
+++ b/modules/gui/frontend/src/widget/mapStatus.module.css
@@ -7,6 +7,7 @@
     flex-wrap: nowrap;
     justify-content: space-around;
 }
+
 .status {
     pointer-events: all;
     color: #ccc;
@@ -17,10 +18,11 @@
     border-radius: .5rem;
     display:flex;
     flex-direction: row;
+    align-items: center;
 }
 
-.status i {
-    margin-right: 0.5rem;
+.status :not(:first-child) {
+    margin-left: .5rem;
 }
 
 .status > * {
